# python2Rust

./: .gitignore  Cargo.toml  ReadME.md  test.py  text_chunker.py  unit_test.py
books/: book1.txt
examples/books/: book1.txt
examples/eval_datasets/: receipts.jsonl
python/eval/: eval.py
python/loader/: text_chunker.py
python/text_chunker/: text_chunker.py
python/utils/: data.py  data_source.py  defaults.py  error_code.py  sampling_method.py
python_src/: main.py  requirements.txt
python_src/core/: batch.py  batch_task.py  conversation.py  conversation_turn.py  data.py  data_bundle.py  data_type.py  few_shot_example.py  inference_metadata.py  interaction.py  metric_category.py  orm.py  output_format.py  role.py  score.py  search_results.py  task.py
python_src/engine/: batch_execution.py  engine.py  inference_cache.py  postprocessor.py  scaler.py  scaler_thread.py  search.py  text_similarity.py
python_src/eval/: dataset.py  eval.py  eval_result.py  eval_run.py  eval_schema.py  eval_tracker.py  evaluator.py  inference.py  primitive_execution.py  rater.py  task_execution.py  task_execution_stats.py  task_run.py  task_score.py
python_src/loader/: text_chunker.py
python_src/models/: base_model.py  model_config.py
python_src/primitives/: base_primitive.py  few_shot.py  instructions.py  multi_select_question.py  multiple_choice_question.py  question_set.py
python_src/storage/: base_file_store.py  local_storage.py
python_src/tests/: test_logger.py  (+1 more)
src/: eval.rs  lib.rs  main.rs  text_chunker.rs
tests/: test_eval.rs  test_text_chunker.rs
(+11 files in other folders)
